--- a/src/config.json
+++ b/src/config.json
@@ -90,7 +90,12 @@
       },
       "servers": [
         {
-          "url": "http://localhost:3000/v1/"
+          "url": "https://example-mongodb-jest-nodejs.herokuapp.com/v1/",
+          "description": "Production"
+        },
+        {
+          "url": "http://localhost:3000/v1/",
+          "description": "Local"
         }
       ]
     },
